--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -105,8 +105,8 @@
 
 /* move Deleted Files to bottom of sidebar */
 .nav-trashbin {
-	position: absolute !important;
-	bottom: 0;
+	position: fixed !important;
+	bottom: 44px;
 }
 
 #filestable tbody tr { background-color:#fff; height:40px; }
